Practice/NotesAPI/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api-service
spec:
  type: LoadBalancer
  selector:
    app: notes-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
